testsuite/tests/typecheck/should_compile/T14811.hs
{-# language UnboxedTuples #-}
module T14811 where

data Foo a = Foo (# a #)
data Bar = Bar (# #)
