testsuite/tests/typecheck/should_fail/T8570a.hs
module T8570a where
data Image = Image { filepath :: () }
logo = Image ()